# restreamer

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  dash-state.yml  requirements.txt  ruff.toml  start_restreamer.sh
accounts/: urls.py  (+3 more)
crates/rs-api/: Cargo.toml
crates/rs-api/src/: adaptive_ttl_tests.rs  audit_handlers.rs  clock_skew_probe.rs  crash_recovery_tests.rs  delivery.rs  delivery_audit_mirror.rs  delivery_binary.rs  delivery_endpoints.rs  delivery_handlers.rs  delivery_helpers.rs  delivery_live_edge.rs  delivery_monitor.rs  delivery_recovery.rs  delivery_reset_tests.rs  delivery_s3_wipe.rs  delivery_status.rs  delivery_status_cap_tests.rs  delivery_status_yt_health_tests.rs  delivery_tests.rs  delivery_youtube.rs  delivery_yt_health.rs  diag.rs  diagnostics_pacing.rs  endpoint_oauth.rs  facebook.rs  facebook_tests.rs  handlers.rs  internet_probe.rs  lib.rs  metrics_handlers.rs  multi_label_oauth_tests.rs  oauth_device.rs  oauth_device_tests.rs  obs.rs  on_vps_ready_tests.rs  progress_poll.rs  rescue_video_handlers.rs  router.rs  router_tests.rs  s3_handlers.rs  (+12 more)
crates/rs-api/tests/: api_integration.rs  delivery_endpoints_tests.rs  websocket_integration.rs
crates/rs-cloud/: Cargo.toml
crates/rs-cloud/src/: hetzner.rs  lib.rs
crates/rs-delivery/: Cargo.toml
crates/rs-delivery/assets/: default_rescue.flv
crates/rs-delivery/src/: api.rs  api_update_start_tests.rs  audit_ring.rs  buffer_state.rs  clock_endpoint.rs  db.rs  disk_cache_fetcher.rs  disk_cache_push_sample.rs  endpoint_audit.rs  endpoint_consumer_helpers.rs  endpoint_ffmpeg_impl.rs  endpoint_handle.rs  endpoint_producer.rs  endpoint_respawn.rs  endpoint_rtmp_url.rs  endpoint_stats.rs  endpoint_task.rs  endpoint_task_backoff_tests.rs  endpoint_task_flv_tests.rs  endpoint_task_pacing_tests.rs  endpoint_task_rescue_tests.rs  endpoint_task_rust_push_tests.rs  endpoint_task_test_root.rs  endpoint_task_tests.rs  endpoint_traits.rs  fast_delay.rs  fast_delay_audit.rs  fast_keepalive.rs  fast_keepalive_escalation.rs  fast_self_healing_tests.rs  ffmpeg_reason.rs  flv_normalizer.rs  lib.rs  main.rs  producer_lag.rs  progress_capture.rs  pushable.rs  rescue.rs  rescue_audit.rs  rescue_behavioral_tests.rs  (+6 more)
crates/rs-delivery/src/chunk_lifecycle/: audit.rs  mod.rs  sampler.rs  sampler_tests.rs  timings.rs  timings_tests.rs
crates/rs-delivery/src/disk_cache/: download_service.rs  endpoint_reader.rs  eviction.rs  mod.rs  position_registry.rs  prefetch_queue.rs  prefetch_queue_tests.rs  prefetch_reader.rs  prefetch_reader_tests.rs  registry.rs
crates/rs-delivery/tests/: ffmpeg_reason_integration.rs
crates/rs-delivery/tests/ffmpeg_reason_fixtures/: 14_Control_Stream_SNV.txt  15_YT_NLCH_4K.txt  16_YT_NLW_4k.txt  17_YT_NLCH_4K.txt  18_YT_NLW_4k.txt  19_FB_Zbynek.txt  23_FB_NewLevel.txt
crates/rs-endpoint/: Cargo.toml
crates/rs-endpoint/src/: disk_pressure.rs  lib.rs  metrics.rs  s3.rs  uploader.rs
crates/rs-endpoint/tests/: upload_retention.rs  uploader_busy_stress.rs  uploader_integration.rs
crates/rs-ffmpeg/: Cargo.toml
crates/rs-ffmpeg/src/: lib.rs
crates/rs-inpoint/: Cargo.toml
crates/rs-inpoint/src/: chunker.rs  flv_chunker.rs  flv_chunker_tests.rs  lib.rs  media_receiver.rs  muxer.rs  rtmp_server.rs
crates/rs-inpoint/tests/: chunker_pipeline.rs  flv_pipeline_e2e.rs  rtmp_server_e2e.rs
crates/rs-rtmp-push/: Cargo.toml
crates/rs-rtmp-push/src/: error.rs  flv.rs  lib.rs  pusher.rs  session.rs  session_read_loop.rs  skew.rs  state.rs  tls.rs  url.rs
crates/rs-rtmp-push/tests/: fb_mock_server.rs  local_tls_loopback.rs  local_xiu_loopback.rs
crates/rs-rtmp-push/tests/common/: mod.rs
crates/rs-youtube/: Cargo.toml
crates/rs-youtube/src/: device_flow.rs  device_flow_tests.rs  lib.rs  oauth.rs  quota.rs  quota_tests.rs  streams.rs  streams_for_label_tests.rs  streams_pagination_tests.rs  test_env.rs
leptos-ui/: Cargo.toml  build.rs  index.html  manifest.json  style.css  sw.js
leptos-ui/src/: api.rs  app.rs  lib.rs  store.rs  utils.rs  ws.rs
leptos-ui/src/components/: add_endpoint_modal.rs  audit_panel.rs  confirm_modal.rs  dashboard.rs  disk_pressure_banner.rs  endpoint_history.rs  endpoint_remove_confirm_modal.rs  endpoints.rs  header.rs  mod.rs  oauth_authorize.rs  operator_dashboard.rs  outage_banner.rs  pacing_panel.rs  settings.rs  templates.rs  upload_strip.rs  uploads.rs  zero_endpoint_banner.rs
local-client-rs/: .gitignore  Cargo.toml  TESTING.md  clippy.toml  index.html  install.ps1  package-lock.json  package.json  playwright.config.ts  setup-deploy.ps1  setup-runner.ps1  uninstall.ps1  vite.config.ts
local-client-rs/crates/rs-api/: Cargo.toml
local-client-rs/crates/rs-cloud/: Cargo.toml
local-client-rs/crates/rs-core/: Cargo.toml
local-client-rs/crates/rs-delivery/: Cargo.toml
local-client-rs/crates/rs-endpoint/: Cargo.toml
local-client-rs/crates/rs-inpoint/: Cargo.toml
local-client-rs/crates/rs-runtime/: Cargo.toml
local-client-rs/crates/rs-service/: Cargo.toml
local-client-rs/crates/rs-ts-normalize/: Cargo.toml
local-client-rs/crates/rs-youtube/: Cargo.toml
local-client-rs/e2e/: chunks.spec.ts  config-editor.spec.ts  dashboard.spec.ts  fixtures.ts  frontend.spec.ts  helpers.ts  log-viewer.spec.ts  mock-api.js  package-lock.json  package.json  playwright.config.ts  tauri-mock.js  websocket.spec.ts
local-client-rs/leptos-ui/: Cargo.toml  Trunk.toml  index.html  style.css
local-client-rs/leptos-ui/src/: api.rs  app.rs  lib.rs  store.rs  ws.rs
local-client-rs/scripts/: import-legacy-data.sh
local-client-rs/src/: App.tsx
local-client-rs/src-tauri/: Cargo.toml  tauri.conf.json
local-client-rs/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tray.rs  tray_icons.rs  updater.rs
local-client-rs/src/api/: client.ts
local-client-rs/src/components/: ChunkList.tsx  ConfigEditor.tsx  Dashboard.tsx  LogViewer.tsx
local-client-rs/src/hooks/: useStatus.ts  useWebSocket.ts
local-client-rs/src/types/: index.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  state.rs  tray.rs
(+461 files in other folders)
