[workspace]
resolver = "2"
members = [
    "crates/rs-core",
    "crates/rs-inpoint",
    "crates/rs-endpoint",
    "crates/rs-api",
    "crates/rs-runtime",
    "crates/rs-service",
    "crates/rs-ffmpeg",
    "crates/rs-cloud",
    "crates/rs-delivery",
    "crates/rs-youtube",
]
# src-tauri is excluded from default workspace builds because it requires
# the frontend to be built first (Tauri generate_context! needs dist/).
# Build it via `npx tauri build` which handles the frontend build automatically.
#
# leptos-ui is excluded because it targets wasm32-unknown-unknown and has
# different dependencies. Build it via `trunk build` from the leptos-ui directory.
exclude = ["src-tauri", "leptos-ui"]

[workspace.package]
version = "0.3.66"
edition = "2024"
license = "MIT"
repository = "https://github.com/zbynekdrlik/restreamer"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# S3
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hashing
md-5 = "0.10"

# RTMP (xiu ecosystem)
streamhub = "0.2"
rtmp = "0.6"

# Logging bridge (xiu crates use `log`, we use `tracing`)
log = "0.4"

# WebSocket client
tokio-tungstenite = "0.26"
sha2 = "0.10"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"

# Workspace crates
rs-core = { path = "crates/rs-core" }
rs-inpoint = { path = "crates/rs-inpoint" }
rs-endpoint = { path = "crates/rs-endpoint" }
rs-api = { path = "crates/rs-api" }
rs-runtime = { path = "crates/rs-runtime" }
rs-service = { path = "crates/rs-service" }
rs-ffmpeg = { path = "crates/rs-ffmpeg" }
rs-cloud = { path = "crates/rs-cloud" }
rs-delivery = { path = "crates/rs-delivery" }
rs-youtube = { path = "crates/rs-youtube" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
