[package]
name = "leptos-ui"
version = "0.22.4"
edition = "2024"
license = "MIT"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-utils = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "console",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Location",
    "Request",
    "RequestInit",
    "Response",
    "Window",
] }
leptos_router = "0.7"
js-sys = "0.3"
futures = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
