[package]
name = "rs-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rs-core.workspace = true
rs-cloud.workspace = true
rs-endpoint = { path = "../rs-endpoint" }
rs-youtube.workspace = true
axum.workspace = true
axum-server.workspace = true
rustls.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
chrono.workspace = true
uuid.workspace = true
tokio-tungstenite.workspace = true
sha2.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile = "3"
