[package]
name = "rs-delivery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rs-delivery"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rust-s3.workspace = true
async-trait = "0.1"
rs-ts-normalize = { path = "../rs-ts-normalize" }
rs-ffmpeg = { path = "../rs-ffmpeg" }

[dev-dependencies]
tempfile = "3"
reqwest.workspace = true
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true, features = ["test-util"] }
