[package]
name = "rs-delivery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rs-delivery"
path = "src/main.rs"

[[bin]]
name = "gen_rescue_flv"
path = "src/bin/gen_rescue_flv.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rust-s3.workspace = true
sqlx.workspace = true
chrono.workspace = true
parking_lot = "0.12"
async-trait = "0.1"
futures = { workspace = true }
sha2 = { workspace = true }
reqwest.workspace = true
rs-core = { path = "../rs-core" }
rs-ffmpeg = { path = "../rs-ffmpeg" }
rs-rtmp-push = { path = "../rs-rtmp-push" }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true, features = ["test-util"] }
