[package]
name = "rs-endpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rs-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
rust-s3.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
sqlx.workspace = true
md-5.workspace = true
futures.workspace = true
chrono.workspace = true
# Disk-pressure monitor (Task 4). Already compiled transitively via rust-s3
# with default features (incl. `disk`), so a direct dep adds zero compile cost.
sysinfo = "0.37"

[features]
# Exposes `rs_endpoint::testing` (mock-S3 uploader driver) for integration
# tests. Never enabled in release builds. CI runs the outage test with
# `cargo test -p rs-endpoint --features testing`.
testing = []

[dev-dependencies]
tempfile = "3"
axum.workspace = true
tower.workspace = true
parking_lot = "0.12"
tracing-test = "0.2"

[[bin]]
name = "bench_s3_upload"
path = "src/bin/bench_s3_upload.rs"
