[package]
name = "rs-inpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rs-core.workspace = true
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
md-5.workspace = true
log.workspace = true
serde_json.workspace = true

# xiu RTMP ecosystem
rtmp.workspace = true
streamhub.workspace = true

[dev-dependencies]
tempfile = "3"
md-5 = { workspace = true }
bytes = { workspace = true }
env_logger = "0.11"
tracing-subscriber = { workspace = true }
