[package]
name = "rs-rtmp-push"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rtmp = { workspace = true }
bytesio = "0.3"
xflv = "0.4"
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
streamhub = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
sha2 = { workspace = true }
tracing-subscriber = { workspace = true }
