[package]
name = "rs-rtmp-push"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rtmp = { workspace = true }
bytesio = "0.3"
xflv = "0.4"
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
async-trait = "0.1"
futures = { workspace = true }
tokio-util = { workspace = true }
# rtmps:// TLS support (#156)
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
streamhub = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
sha2 = { workspace = true }
tracing-subscriber = { workspace = true }
rcgen = { workspace = true }
