[package]
name = "rs-youtube"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
urlencoding = "2"
rs-core = { path = "../rs-core" }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
