[package]
name = "leptos-ui"
version = "0.2.1"
edition = "2024"
license = "MIT"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
gloo-timers = "0.3"
gloo-net = { version = "0.6", features = ["http"] }
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
