[package]
name = "restreamer-tray"
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/zbynekdrlik/restreamer"
rust-version = "1.85"

[lib]
name = "restreamer_tray_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rs-core = { path = "../crates/rs-core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
