[package]
name = "rs-inpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rs-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
md-5.workspace = true
chrono.workspace = true
sqlx.workspace = true

[dev-dependencies]
tempfile = "3"
