[package]
name = "rs-inpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rs-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
md-5.workspace = true
chrono.workspace = true
sqlx.workspace = true
serde_json.workspace = true
futures.workspace = true

# xiu RTMP/MPEG-TS ecosystem
rtmp.workspace = true
streamhub.workspace = true
xmpegts.workspace = true
xflv.workspace = true
log.workspace = true

[dev-dependencies]
tempfile = "3"
