[package]
name = "rs-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "restreamer-service"
path = "src/main.rs"

[dependencies]
rs-core.workspace = true
rs-inpoint.workspace = true
rs-endpoint.workspace = true
rs-api.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
sqlx.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tempfile = "3"
axum.workspace = true
